[tool.poetry]
name = "hotmodern-python"
version = "0.1.0"
description = "Python learning project by blog posts series 'Hypermodern Python' (by Claudio Jolowicz)"
authors = ["Artem Hotenov <artem@hotenov.com>"]
readme = "README.md"
homepage = "https://github.com/hotenov/hotmodern-python"
repository = "https://github.com/hotenov/hotmodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9.2"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hotmodern-python = "hotmodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hotmodern_python"]

[tool.coverage.report]
show_missing = true