[tool.poetry]
name = "hotmodern-python"
version = "0.1.1"
description = "Python learning project by blog posts series 'Hypermodern Python' (by Claudio Jolowicz)"
authors = ["Artem Hotenov <artem@hotenov.com>"]
readme = "README.md"
homepage = "https://github.com/hotenov/hotmodern-python"
repository = "https://github.com/hotenov/hotmodern-python"
keywords = ["hypermodern"]
documentation = "https://hotmodern-python.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.32.3"
desert = "^2020.11.18"
marshmallow = "^3.10.0"

[tool.poetry.group.dev.dependencies]


[tool.poetry.group.docs.dependencies]
Sphinx = "^3.5.3"
sphinx-autodoc-typehints = "^1.11.1"

[tool.poetry.group.format.dependencies]
black = "^24.4.2"

[tool.poetry.group.test.dependencies]
codecov = "^2.1.11"
coverage = {extras = ["toml"], version = "^5.5"}
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
safety = "^1.10.3"
xdoctest = "^0.15.4"

[tool.poetry.group.lint.dependencies]
darglint = "^1.7.0"
flake8 = "^3.9.0"
flake8-annotations = "^2.6.1"
flake8-black = "^0.2.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mypy = "^1.11.1"
types-requests = "^2.32.0.20240712"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hotmodern-python = "hotmodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hotmodern_python"]

[tool.coverage.report]
show_missing = true